# JNotes

./: .gitignore  README.md  meson.build  net.jeena.jnotes.json  python3-caldav.json
data/: meson.build  net.jeena.jnotes.desktop.in  net.jeena.jnotes.gschema.xml  net.jeena.jnotes.metainfo.xml.in
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gsettings.py  jnotes.gresource.xml  jnotes.in  main.py  meson.build  note_edit.py  notes_list.py  preferences.py  sidebar.py  sync.py  window.py
src/ui/: note_edit.ui  notes_list.ui  preferences.ui  sidebar.ui  window.ui
